Finished application html

--- a/practice-for-ch-rails-ninety-nine-cats2-long-practice-main/app/views/layouts/application.html.erb
+++ b/practice-for-ch-rails-ninety-nine-cats2-long-practice-main/app/views/layouts/application.html.erb
@@ -14,6 +14,16 @@
   <body>
     <nav class="main-nav">
       <h1><a href="<%= cats_url %>">99 Cats</a></h1>
+      <% if logged_in? %>
+         <h2> Welcome, <%= @current_user.username  %>  </>
+          <form action="<%=session_url%>" method="POST">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="submit" value="Logout">
+          </form>
+      <% else %>
+        <a href="<%= new_user_url%>">Sign up</a>
+        <a href="<%= new_session_url%>">Login</a>
+      <% end %>
     </nav>
     <main>
       <%= yield %>
